# aywen

./: .gitignore  QparaAlfredo.md  README.md  main.py  pyproject.toml
mlruns/0/: meta.yaml
notebooks/: playground.ipynb
notebooks/mlruns/0/: meta.yaml
scripts/: eval_pipeline.py  parquet_to_csv.py  run_pipeline.py
scripts/artifacts/: data.parquet  fuel_mapping.json  model.pkl  pi.json
scripts/mlruns/0/: meta.yaml
scripts/mlruns/403323801140861685/: meta.yaml
scripts/mlruns/403323801140861685/1e6e5c5b8576405abb5b30f2d5dd0760/: meta.yaml
scripts/mlruns/403323801140861685/1f121b46ef4b48f78b79b218bdbc2045/: meta.yaml
scripts/mlruns/403323801140861685/200f25a839c2497b8e88643d82f134a6/: meta.yaml
scripts/mlruns/403323801140861685/2e1fb5358e1e45aaa96a9b973690ca0a/: meta.yaml
scripts/mlruns/403323801140861685/31cc89c631c1403d8d4feca58107dd14/: meta.yaml
scripts/mlruns/403323801140861685/31d45cd59acd4c2aa2e578db68d8d1df/: meta.yaml
scripts/mlruns/403323801140861685/36f3584e6c254991bcc1aa8ee5eaa6d5/: meta.yaml
scripts/mlruns/403323801140861685/45d203c81fa54615af0ed9058697c501/: meta.yaml
scripts/mlruns/403323801140861685/6b5a2b93e16b4a4d995a1e59a0c65485/: meta.yaml
scripts/mlruns/403323801140861685/6fb4fae3e3014c8fb09237726fe566da/: meta.yaml
scripts/mlruns/403323801140861685/73cb2c5e547d4d709de597d87383e09b/: meta.yaml
scripts/mlruns/403323801140861685/74c92f1a835b4ae69207e0c5be9a06db/: meta.yaml
scripts/mlruns/403323801140861685/8401b82f7b3f45118fd261372f2a5f87/: meta.yaml
scripts/mlruns/403323801140861685/84c9f701e84d485ab3bb4a96f9a25963/: meta.yaml
scripts/mlruns/403323801140861685/85cfc1797b6d4872b04a8a8f6ad76ed9/: meta.yaml
scripts/mlruns/403323801140861685/98be0a6544a64bbf80224c7a8586b4dc/: meta.yaml
scripts/mlruns/403323801140861685/a13b6f5499bf437bae82eb7514662bbb/: meta.yaml
scripts/mlruns/403323801140861685/a5ad0e4015df405d8bf2421adc8c18bc/: meta.yaml
scripts/mlruns/403323801140861685/c468c506c446428bb5032698ab136432/: meta.yaml
scripts/mlruns/403323801140861685/d59f2c01e0cb40d690834eaaf691edda/: meta.yaml
scripts/mlruns/403323801140861685/d9ad9dc706ee4b49876b8239b794644e/: meta.yaml
scripts/mlruns/403323801140861685/eb7f3f178fb846e7bc9a702dddf1b2cc/: meta.yaml
scripts/mlruns/974259793623502332/: meta.yaml
src/: sitecustomize.py
src/aywen/: __main__.py  evaluating.py  features.py  filtering.py  fire_features.py  logging_setup.py  models.py  postprocessing.py  preprocessing.py  testing.py  training.py  utils.py
testing/: conftest.py  pipeline_test.py  test_compare_runs.py  test_full_pipeline.py
(+301 files in other folders)
